# ComMod

./: .gitattributes  .gitignore  LICENSE  README.md  build_flet_linux_executable.sh  build_linux_executable.sh  build_nuitka.ps1  build_nuitka_310.ps1  build_nuitka_console.ps1  build_nuitka_flet.ps1  build_nuitka_flet_311.ps1  build_nuitka_onefile.ps1  build_nuitka_onefile_console.ps1  build_nuitka_onefile_linux.sh  build_nuitka_onefile_with_console.ps1  build_nuitka_standalone.ps1  color.py  commod.py  commod_flet.py  commod_qt.py  console_color.py  console_ui.py  data.py  environment.py  errors.py  file_ops.py  get_system_fonts.py  hd_ui.py  localisation.py  mod.py  patcher.py  progbar.py  pyproject.toml  requirements.txt  requirements_gui.txt  utils.py
assets/: placeholder.md
localisation/: strings_eng.yaml  strings_rus.yaml  strings_ukr.yaml
qtmodern/: resources.py  styles.py  windows.py
qtmodern/resources/: rc_resources.py  resources.qrc  style.qss
src/: __main__.py  commod.py  commod_console.py  commod_flet.py  commod_launcher.py  data.py  environment.py  file_ops.py  hd_ui.py  localisation.py  mod.py  requirements.txt
src/commod/: __init__.py  __main__.py  _commod.yaml
src/commod/assets/: diff_guides.json  placeholder.md
src/commod/assets/docs/: types_of_commands_ru.md  using_differ_ru.md  whats_merge_mod_ru.md
src/commod/console/: commod_console.py  console_ui.py  progbar.py
src/commod/game/: data.py  environment.py  hd_ui.py  mod.py  mod_archive.py  mod_auxiliary.py  mod_legacy.py  pydantic_mod.py
src/commod/gui/: app_widgets.py  commod_flet.py  common_widgets.py  config.py  modding_tools.py
src/commod/helpers/: errors.py  file_ops.py  get_system_fonts.py  parse_ops.py  validation.py
src/commod/localisation/: service.py  strings_eng.yaml  strings_rus.yaml  strings_ukr.yaml
src/commod/tools/: xml_diff.py  xml_helpers.py  xml_merge.py
src/console/: color.py  commod_console.py  console_ui.py  progbar.py
src/game/: data.py  environment.py  hd_ui.py  mod.py  mod_archive.py
src/gui/: app_widgets.py  commod_flet.py  common_widgets.py  config.py
src/helpers/: file_ops.py  get_system_fonts.py  get_system_fonts_linux.py  get_system_fonts_windows.py  parse_ops.py
src/localisation/: service.py  strings_rus.yaml
tests/: xml_test.py
tests/assets/: property_tree.xml
