[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "commod"
dynamic = ["version"]
requires-python = ">=3.12,<3.14"
dependencies = [
    "flet==0.26.0",
    "aiofiles==24.1.0",
    "aiopath==0.7.7",
    "httpx==0.28.1",
    "lxml==5.3.0",
    "markdownify==0.12.1",
    "pathvalidate==3.2.3",
    "py7zr==0.22.0",
    "pydantic==2.10.6",
    "PyYAML==6.0.2"
]

[project.scripts]
commod = "commod.__main__:main_gui"

[tool.setuptools.dynamic]
version = {attr = "commod.__version__"}


[project.optional-dependencies]
dev = [
    "nuitka>=2.3",
    "ruff>=0.1.8"
]

[tool.ruff]
line-length = 110
extend-exclude = ["venv", "C:\\Users\\**\\*.py"]
select = ["ALL"]
cache-dir = "/tmp/ruff-cache/"
ignore = ["D1", "TCH002", "TCH003", "ANN101", "ANN102", "COM812", "TD", "FIX", "DTZ005",
          "EM101", "EM102", "TRY003", "TRY301", "G004", # logging and exceptions improvements
          "C901", "PLR0912", "PLR0915", "PLR0913", # complexity suggestions
          "ERA001", # dead code
          "PTH", # migration to pathlib from os (mostly)
          "FBT", # booleans as args
          "T201", "S605", "S607", # print, os.system("cls")
          "S324", # cryptographic warning
          "TRY400", # logging.error -> exception
          "ARG001", "ARG002", # Unused method argument, Unused function argument
          ]
# D1 disabled for philosophical reason, hard docstrings requirement is debatable
# ANN101, ANN102 are disabled as type checkers can infer this automatically
# TCH *2, *3 disabled to decrease complexity of imports
# COM812 is giving false positives on multiline string concatenation
# TD and FIX disabled in a single developer context, as all responsibility is on him
# DTZ005 is useless in context when TZ is local and datetime used for short timing
# T201, S605\6 - 'print' and os.system("cls") are extensively used in cli version of the app
# TRY400 - our usage of logging.error is not requiring to impicitly provide traceback 

# PTH - not a pathlib evangelist and most of these are not hard truths, maybe consider later on
# ERA001 - remove ignore and fix on next version after 2.1
# EM101, EM102 - reenable for a future refactor, too many instances to fix right now
# TRY003, TRY301, G004 - reenable for a future refactor, too many instances to fix right now
# C901", PLR0912, PRL0915, PLR0913 - complexity suggestions to tone down branching and complexity of functions, maybe later
# FBT - need to think about it, maybe implement later
# ARG001, ARG002 - we have dosens of cases when ft.ControlEvent is passes implicitly by flet in signals, need to think

[tool.ruff.lint.isort.sections]
no-lines-before = ["standard-library", "local-folder"]
# known-local-folder = ["src"]
section-order = ["future", "standard-library", "first-party", "third-party", "local-folder"]
# sections = ["FUTURE", "STDLIB", "FIRSTPARTY", "THIRDPARTY", "LOCALFOLDER"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

# [tool.ruff.lint]
# extend-select = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
include = ["./src/"]
exclude = ["venv", "C:\\Users\\**\\*.py"]
